# don_padel

./: .gitignore  CONTEXT.md  Dockerfile  README.md  polling_script.py
.cursor/plans/: don_padel_mvp_plan_9c7a7d1d.plan.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_playtomic_court_day_snapshots.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/db/: session.py
backend/app/models/: __init__.py  availability_snapshot.py  ingestion_run.py  playtomic_court_day_snapshot.py  venue.py
backend/app/schemas/: venue.py
backend/app/services/: ingestion.py  playtomic_client.py  playtomic_daily_ingestion.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: PlaytomicScheduleView.tsx
frontend/src/pages/: TimesPage.css  TimesPage.tsx
